authorization-policy/app-1/app-1-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app-1-auth
spec:
  selector:
    matchLabels:
      app: app-1
  action: DENY
  rules:
  - from:
    - source:
        namespaces: ["dev"]
    to:
    - operation:
        methods: ["GET"]
